--- a/style.css
+++ b/style.css
@@ -40,6 +40,16 @@ p{
     flex-wrap: wrap;
     justify-content: space-around;
 }
+.btn{
+    display: inline-block;
+    background: darkorange;
+    color: white;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+}
+
+
 .col-2{
     flex-basis: 50%;
     min-width: 300px;
@@ -53,12 +63,16 @@ p{
     line-height: 60px;
     margin: 25px 0;
 }
+
+
 .header{
     background: radial-gradient(#fff,lightblue);
 }
 .header .row{
     margin-top: 70px;
 }
+
+
 .small-container{
     max-width: 1080px;
     margin: auto;
@@ -103,6 +117,12 @@ h4{
 .col-4 p{
     font-size: 14px;
 }
+.row-2{
+    justify-content: space-between;
+    margin: 100px auto 50px;
+}
+
+
 .menu-icon{
     width: 35px;
     height: 35px;
@@ -132,4 +152,192 @@ h4{
         display: block;
         cursor: pointer;
     }
+}
+
+
+.brands{
+    margin: 100px auto;
+}
+.col-5{
+    width: 160px;
+}
+.col-5 img{
+    width: 100%;
+    cursor: pointer;
+    filter: grayscale(100%);
+}
+.col-5 img:hover{
+    filter: grayscale(0);
+}
+
+
+.footer{
+    background: darkgrey;
+    color: white;
+    font-size: 14px;
+    padding: 60px 0 20px;
+}
+.footer h3{
+    margin-bottom: 20px;
+}
+.footer p{
+    color: white;
+}
+.footer-col-1, .footer-col-2, .footer-col-3{
+    min-width: 250px;
+    margin-bottom: 20px;
+}
+.footer-col-1{
+    flex-basis: 20%;
+}
+.footer-col-2{
+    flex: 1;
+    text-align: center;
+}
+.footer-col-2 img{
+    width: 180px;
+    margin-bottom: 20px;
+}
+.footer-col-3{
+    flex-basis: 12%;
+    text-align: center;
+}
+
+
+.single-item{
+    margin-top: 80px;
+}
+.single-item .col-2 img{
+    padding: 0;
+}
+.single-item h4{
+    margin: 20px 0;
+    font-size: 22px;
+    font-weight: bold;
+}
+.single-item input{
+    width: 50px;
+    height: 40px;
+    padding-left: 10px;
+    font-size: 20px;
+    margin-right: 10px;
+    border: 1px solid darkorange;
+}
+input:focus{
+    outline: none;
+}
+
+.cart-page{
+    margin: 80px auto;
+}
+table{
+    width: 100%;
+    border-collapse: collapse;
+}
+.cart-info{
+    display: flex;
+    flex-wrap: wrap;
+}
+th{
+    text-align: left;
+    padding: 5px;
+    color: white;
+    background: darkorange;
+    font-weight: normal;
+}
+td{
+    padding: 10px 5px;
+}
+td input{
+    width: 40px;
+    height: 30px;
+    padding: 5px;
+}
+td a{
+    color: darkorange;
+    font-size: 12px;
+}
+td img{
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+}
+
+.total-cijena{
+    display: flex;
+    justify-content: flex-end;
+}
+.total-cijena table{
+    border-top: 3px solid darkorange;
+    width: 100%;
+    max-width: 300px;
+}
+td:last-child{
+    text-align: right;
+}
+th:last-child{
+    text-align: right;
+}
+
+.login{
+    padding: 50px 0;
+    background: radial-gradient(white,lightblue);
+}
+.form-container{
+    background: white;
+    width: 300px;
+    height: 400px;
+    position: relative;
+    text-align: center;
+    padding: 20px 0;
+    margin: auto;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0);
+}
+.form-container span{
+    font-weight: bold;
+    padding: 0 10px;
+    color: gray;
+    cursor: pointer;
+    width: 100px;
+    display: inline-block;
+}
+.form-btn{
+    display: inline-block;
+}
+.form-container form{
+    max-width: 300px;
+    padding: 0 20px;
+    position: absolute;
+    top: 130px;
+    transition: transform 1s;
+}
+form input{
+    width: 100%;
+    height: 30px;
+    margin: 10px 0;
+    padding: 0 10px;
+    border: 1px solid darkorange;
+}
+form .btn{
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    margin: 10px 0;
+}
+form .btn:focus{
+    outline: none;
+}
+#login-form{
+    left: -350px;
+}
+#reg-form{
+    left: 0;
+}
+#indicator{
+    width: 100px;
+    border: none;
+    background: darkorange;
+    height: 3px;
+    margin-top: 8px;
+    transform: translateX(100px);
 }
