--- a/style.css
+++ b/style.css
@@ -343,3 +343,9 @@ form .btn:focus{
     transform: translateX(60px);
     transition: transform 1s;
 }
+.success {
+    color: #3c763d; 
+    background: #dff0d8; 
+    border: 1px solid #3c763d;
+    margin-bottom: 20px;
+}
